--- a/cliente/src/Componentes/AllPlayers/AllPlayers.module.css
+++ b/cliente/src/Componentes/AllPlayers/AllPlayers.module.css
@@ -19,17 +19,17 @@
 .filtrado{
     z-index: 1000;
     margin: 0 auto;
-    border-radius: 10px;
+    border-radius: 1vw;
     display: flex;
     justify-content: space-evenly;
-    padding-top: 20px;
+    padding-top: 4vh;
     & input {
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
         border: none;
         border-radius: 10px;
         text-align: center;
-        height: 40px;
-        width: 300px;
+        height: 6vh;
+        width: 20vw;
         font-family: 'Gabarito', cursive;
         &:focus{
             outline:none !important;
@@ -43,14 +43,14 @@
         border: none;
         border-radius: 10px;
         text-align: center;
-        height: 40px;
-        width: 300px;
+        height: 6vh;
+        width: 20vw;
         transition: 0.25s ease all;
         font-family: 'Gabarito', cursive;
         & select{
             border: 1px solid #333; 
             background-color: #f2f2f2; 
-            padding: 20px; 
+            padding: 2vw; 
             
         }
         &:focus{
@@ -76,8 +76,8 @@
     margin: auto;
 }
 .nombre{
-    font-size: 12px;
-    letter-spacing: 1px;
+    font-size: 0.8vw;
+    letter-spacing: 0.1vw;
     text-transform: uppercase;
     font-family: 'Plus Jakarta Sans', sans-serif; 
     font-weight: 800;
@@ -96,28 +96,26 @@
 .tabla{
     width: 100%;
     height: 100%;
-    border-radius: 10px;
-    font-size: 10px;
+    font-size: 0.7vw;
     overflow: hidden;
     text-align: center;
     font-family: 'Bricolage Grotesque', sans-serif;
 }
 
 .boton{
-    font-size: 12px;
+    font-size: 1vw;
 }
 
 .contenedor_tabla{
     position: absolute;
     width: 80%;
-    border-radius: 10px;
-    top: 100px;
+    border-radius: 1vw;
+    top: 15vh;
     left: 0;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
     background-color: transparent;
     right: 0;
     margin: auto;
-    font-size: 10px;
     text-align: center;
     font-family: 'Bricolage Grotesque', sans-serif;
 
@@ -129,7 +127,7 @@
 
 
 .titulos2{
-    font-size: 17px; 
+    font-size: 1.1vw; 
     font-family: 'Plus Jakarta Sans', sans-serif; 
     text-transform: uppercase; 
 
@@ -141,34 +139,34 @@
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    padding-top: 20px;
     & input{
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
         border: none;
         text-align: center;
         border-radius: 10px;
-        height: 40px;
-        width: 300px;
+        height: 4vh;
+        width: 30vw;
         font-family: 'Plus Jakarta Sans', sans-serif; 
     }
 }
 
 .imge{
-    width: 30px;
+    width: 2vw;
 }
 
 .circulo_verde{
-    width: 15px;
-    border-radius: 100px;
+    width: 1vw;
+    border-radius: 1vh;
     background-color: green;
     color: green;
 }
 
 
 .circulo_rojo{
-    width: 15px;
-    border-radius: 100px;
+    width: 1vw;
+    border-radius: 1vh;
     color: rgb(255, 4, 4);
     background-color: rgb(255, 4, 4);
 }
+
 
