--- a/cliente/src/Componentes/AllPlayers/AllPlayers.module.css
+++ b/cliente/src/Componentes/AllPlayers/AllPlayers.module.css
@@ -27,8 +27,9 @@
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   border: none;
   border-radius: 10px;
+  font-size: 1.8vw;
   text-align: center;
-  height: 3vh;
+  height: 4vw;
   width: 25vw;
   font-family: "Gabarito", cursive;
 }
@@ -38,7 +39,8 @@
   border: none;
   border-radius: 10px;
   text-align: center;
-  height: 3vh;
+  font-size: 1.8vw;
+  height: 4vw;
   width: 25vw;
   transition: 0.25s ease all;
   font-family: "Gabarito", cursive;
@@ -142,7 +144,7 @@
 
 .circulo_verde {
   width: 1vw;
-  height: 1vh;
+  height: 1vw;
   border-radius: 1vh;
   background-color: green;
   color: green;
@@ -150,8 +152,21 @@
 
 .circulo_rojo {
   width: 1vw;
-  height: 1vh;
+  height: 1vw;
   border-radius: 1vh;
   color: rgb(255, 4, 4);
   background-color: rgb(255, 4, 4);
+}
+
+
+@media(min-width: 1100px) {
+  .filtrado input {
+    height: 3.5vw;
+    width: 25vw;  
+  }
+  .filtrado select {
+    height: 3.5vw;
+    width: 25vw;
+  }
+
 }
