--- a/cliente/src/Componentes/Home/Home.module.css
+++ b/cliente/src/Componentes/Home/Home.module.css
@@ -27,7 +27,8 @@
 .sections div {
   background-color: aliceblue;
   display: flex;
-  margin-right: 5vw;
+  margin-left: 1vw;
+  margin-right: 1vw;
   border-radius: 1.2vw;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   margin-bottom: 30px;
@@ -64,3 +65,5 @@
   margin: auto;
   background-color: rgb(167, 163, 163);
 }
+
+
