--- a/cliente/src/Componentes/LoginPage/LoginPage.module.css
+++ b/cliente/src/Componentes/LoginPage/LoginPage.module.css
@@ -73,9 +73,9 @@
 
 .input{
     width:30vw;
-    height: 5vh;
-    margin-bottom: 3vh;
-    margin-top: 2vh;
+    height: 4vw;
+    margin-bottom: 0vh;
+    margin-top: 0vh;
     background-color: #eeffffa4;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.212);
     border: none;
@@ -85,13 +85,13 @@
 }
 .input::placeholder{
     color: #adadad;
-    font-size: 1.5vw;
+    font-size: 1.3vw;
     font-weight: 100;
   }
 
 .info{
-    font-size: 1.7vw;
-    margin-top: 7vh;
+    font-size: 1.5vw;
+    margin-top: 5vw;
     font-weight: 200;
     align-items: center;
     color: rgb(150, 150, 150);
@@ -139,7 +139,7 @@
 }
 
 .errors{
-    font-size: 1.4vw;
+    font-size: 1.1vw;
     text-align: center;
     color: red;
     font-family: 'Prompt', sans-serif;
@@ -148,7 +148,7 @@
 .error{
     width: 100%;
     text-align: center;
-    font-size: 1.6vw;
+    font-size: 1.5vw;
     margin-bottom: -3vh;
     font-weight: 500;
     font-family: 'Prompt', sans-serif;
@@ -157,3 +157,98 @@
     color: white;
 }
 
+@media(min-width: 1100px) {
+    .formulario{
+        width: 70%;
+        height: 80%;
+    }
+    .img_form{
+        width: 50%;
+    }
+    
+    .titulo{
+        font-size: 3vw;
+    }
+    
+    .titulo_2{
+        font-size: 5vw;
+    }
+    
+    .subtitulo{
+        font-size: 1.2vw;
+        font-weight: 400;
+       
+    }
+    
+    .login{
+        font-size: 4vw;
+    
+    }
+    
+    .input{
+        width:20vw;
+        height: 5vh;
+        margin-bottom: 1vh;
+        margin-top: 1vh;
+    }
+    .input::placeholder{
+        font-size: 1.1vw;
+      }
+    
+    .info{
+        font-size: 0.9vw;
+        margin-top: 6vh;
+    }
+    .info2{
+        font-size: 1.3vw;
+        margin-right: 10px;
+    }
+    
+    .cont_buttom {
+        margin-top: 2vw;
+        text-align: center;
+      }
+      
+    .cont_buttom button {
+        border: none;
+        padding: 0.6vw;
+        font-size: 1.1vw;
+        background-color: rgb(41, 67, 95);
+      }
+    .cont_buttom h2 {
+        font-size: 0.8vw;
+        letter-spacing: 0.1vw;
+        margin-top: 10px;
+      }
+    
+    .form{
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        margin-top: 50px;
+    
+    }
+    
+    .errors{
+        font-size: 1.1vw;
+        text-align: center;
+        color: red;
+        font-family: 'Prompt', sans-serif;
+    }
+    
+    .error{
+        width: 100%;
+        text-align: center;
+        font-size: 1.2vw;
+        margin-bottom: -3vh;
+        font-weight: 400;
+        font-family: 'Prompt', sans-serif;
+        background-color: rgba(255, 0, 0, 0.699);
+        border-radius: 10px;
+        color: white;
+    }
+    
+
+    
+}
