--- a/cliente/src/Componentes/NewPlayer/NewPlayer.module.css
+++ b/cliente/src/Componentes/NewPlayer/NewPlayer.module.css
@@ -9,28 +9,22 @@
     display: flex;
     justify-content: space-around;
     font-family: 'Bricolage Grotesque', sans-serif;
-    font-size: 20px;
+    font-size: 0.1vw;
     width: 100%;
-    & input{
-        width: 270px; 
-        height: 40px;
-        font-family: 'Prompt', sans-serif;
-        font-size: 13px;
-       }
-    & select{
-        width: 270px; 
-        height: 40px;
-        font-family: 'Gabarito', cursive;
-        text-align: center;
-        font-size: 13px;
-    }
-    & textarea{
-        width:500px; 
-        font-family: 'Prompt', sans-serif;
-        font-size: 13px;
-    }
 }
-
+.formu input{
+    width: 32vw; 
+    height: 4vw;
+    font-family: 'Prompt', sans-serif;
+    font-size: 13px;
+   }
+.formu select{
+    width: 32vw; 
+    height: 4vw;
+    font-family: 'Gabarito', cursive;
+    text-align: center;
+    font-size: 13px;
+}
 .contenedor{
     width: 100%;
     height: 100vh;
@@ -43,7 +37,7 @@
 
 .formulario{
     padding-top: 30px;
-    width: 60%;
+    width: 80%;
     height: auto;
     left: 0;
     border-radius: 20px;
@@ -53,15 +47,12 @@
     right: 0;
     margin: auto;
     background-color: white;
-    
-    & h2{
-        font-family: 'Dela Gothic One', cursive;
-        text-transform: uppercase;
-
-
-    }
 }
 
+.formulario h2{
+    font-family: 'Dela Gothic One', cursive;
+    text-transform: uppercase;
+}
 .alert{
     position: relative;
     z-index: 99990;
@@ -69,23 +60,23 @@
 
 .formu h5{
     font-family: 'Dosis', sans-serif;
-    padding: 10px;
+    padding: 1vw;
 
 }
 
 .boton{
-    margin-top: 20px;
+    margin-top: 2vw;
 }
 
 .errors{
-    font-size: 13px;
+    font-size: 1.3vw;
     text-align: center;
     color: red;
     font-family: 'Prompt', sans-serif;
 }
 
 .space{
-    height: 20px;;
+    height: 2vw;;
 }
 
 
@@ -94,21 +85,25 @@
     border: none;
     background-color: aliceblue;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.212);
-    &:focus{
-        outline:none !important;
-        border: 1px solid rgb(147, 186, 192);
-    }
 }
 
-
+.formu div input:focus{
+    outline:none !important;
+    border: 1px solid rgb(147, 186, 192);
+}
 
 .formu div select{
     border-radius: 10px;
     background-color: aliceblue;
     border: none;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.212);
-    &:focus{
-        outline:none !important;
-        border: 1px solid rgb(147, 186, 192);
-    }
+}
+
+.formu div select:focus{
+    outline:none !important;
+    border: 1px solid rgb(147, 186, 192);
+}
+
+@media(max-width :1050px){
+
 }
