--- a/cliente/src/Componentes/Barra/Barra.module.css
+++ b/cliente/src/Componentes/Barra/Barra.module.css
@@ -96,6 +96,19 @@
     font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
+.ajustes{
+    position: absolute;
+    right: -2vw;
+    top: 2vh;
+    height: 3vw;
+    width: auto;
+    transition: 200ms ease all;}
+
+.ajustes:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
 .boton:hover{
     transform: scale(1.1);
 }
