--- a/cliente/src/Componentes/LoginPage/LoginPage.module.css
+++ b/cliente/src/Componentes/LoginPage/LoginPage.module.css
@@ -73,7 +73,7 @@
 
 .input{
     width:30vw;
-    height: 4vw;
+    height: 4vh;
     margin-bottom: 0vh;
     margin-top: 0vh;
     background-color: #eeffffa4;
@@ -91,7 +91,7 @@
 
 .info{
     font-size: 1.5vw;
-    margin-top: 5vw;
+    margin-top: 5.5vh;
     font-weight: 200;
     align-items: center;
     color: rgb(150, 150, 150);
@@ -103,7 +103,7 @@
 }
 
 .cont_buttom {
-    margin-top: 3vw;
+    margin-top: 4vh;
     text-align: center;
   }
   
@@ -126,7 +126,7 @@
 .cont_buttom h2 {
     font-size: 1.1vw;
     letter-spacing: 0.2vw;
-    margin-top: 10px;
+    margin-top: 1.5vh;
   }
 
 .form{
@@ -140,6 +140,7 @@
 
 .errors{
     font-size: 1.1vw;
+    padding-top: 2px;
     text-align: center;
     color: red;
     font-family: 'Prompt', sans-serif;
@@ -186,7 +187,6 @@
     }
     
     .input{
-        width:20vw;
         height: 5vh;
         margin-bottom: 1vh;
         margin-top: 1vh;
@@ -201,11 +201,11 @@
     }
     .info2{
         font-size: 1.3vw;
-        margin-right: 10px;
+        margin-right: 1vw;
     }
     
     .cont_buttom {
-        margin-top: 2vw;
+        margin-top: 2vh;
         text-align: center;
       }
       
@@ -218,7 +218,7 @@
     .cont_buttom h2 {
         font-size: 0.8vw;
         letter-spacing: 0.1vw;
-        margin-top: 10px;
+        margin-top: 1vh;
       }
     
     .form{
@@ -226,7 +226,7 @@
         right: 0;
         bottom: 0;
         margin: auto;
-        margin-top: 50px;
+        margin-top: 5vh;
     
     }
     
@@ -250,5 +250,53 @@
     }
     
 
+    
+}
+
+@media (max-width:720px){
+    .login{
+        font-size: 6.9vw;
+    }
+    .info{
+        font-size: 3vw;
+        margin-top: 6vh;
+    }
+    .info2{
+        font-size: 2.5vw;
+        margin-right: 1vw;
+    }
+    .input::placeholder{
+        font-size: 2vw;
+        padding-left: 1vw;
+      }
+    .errors{
+        padding-top: 2vh;
+        font-size: 2.2vw;
+        text-align: center;
+        color: red;
+        font-family: 'Prompt', sans-serif;
+    }
+    .input{
+        width: 40vw;
+    }
+    .cont_buttom {
+        margin-top: 2vh;
+        text-align: center;
+      }
+      
+    .cont_buttom button {
+        border: none;
+        padding: 2vw;
+        width: 20vw;
+        font-size: 2vw;
+        background-color: rgb(41, 67, 95);
+      }
+    .cont_buttom h2 {
+        font-size: 1.8vw;
+        letter-spacing: 0.1vw;
+        margin-top: 1vh;
+      }
+
+    
     
 }
