--- a/cliente/src/Componentes/LoginPage/LoginPage.module.css
+++ b/cliente/src/Componentes/LoginPage/LoginPage.module.css
@@ -18,11 +18,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
-    width: 90%;
-    height: 70%;
+    width: 70vw;
+    height: 40vw;
     background-color: white;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
 
 }
 
@@ -32,13 +31,12 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    border-radius: 10px 0 0 10px;
 
 }
 
 .titulo{
-    font-size: 5vw;
-    margin-top: 4vh;
+    font-size: 3vw;
+    margin-top: 2vw;
     font-family: 'Bricolage Grotesque', sans-serif;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -46,46 +44,49 @@
 
 .titulo_2{
     margin-top: -1vh;
-    font-size: 7vw;
+    font-size: 4vw;
     color: #ffffff;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .cont{
-    margin-left: 5%;
+    margin-left: 2vw;
 }
 
 .subtitulo{
-    font-size: 1.6vw;
-    font-weight: 400;
+    font-size: 1.2vw;
     font-family: 'Prompt', sans-serif;
-    color: rgb(31, 31, 31);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    color: rgb(0, 0, 0);
 }
 
 .login{
+    text-align: center;
     font-family: 'Bricolage Grotesque', sans-serif;
     color: rgb(214, 232, 252);;
-    font-size: 6vw;
+    font-size: 3vw;
+    margin-bottom: 3vw;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 
 }
 
 .input{
     width:30vw;
-    height: 4vh;
-    margin-bottom: 0vh;
-    margin-top: 0vh;
-    background-color: #eeffffa4;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.212);
+    height: 3vw;
+    font-size: 1vw;
+    margin-bottom: 3vw;
+    margin-top: 2vw;
+    color: rgb(0, 0, 0);
     border: none;
+    background-color: rgb(231, 241, 253);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.212);
+    border-left: 0.3vw solid rgb(45, 145, 252);
     font-weight: 200;
-    border-radius: 5vw;
     font-family: 'Prompt', sans-serif;
 }
 .input::placeholder{
     color: #adadad;
     font-size: 1.3vw;
+    padding-left: 1vw;
     font-weight: 100;
   }
 
@@ -97,10 +98,6 @@
     color: rgb(150, 150, 150);
 }
 
-.info2{
-    font-size: 1.9vw;
-    margin-right: 10px;
-}
 
 .cont_buttom {
     margin-top: 4vh;
@@ -109,10 +106,10 @@
   
 .cont_buttom button {
     border: none;
-    padding: 1vw;
-    font-size: 1.9vw;
+    padding: 0.5vw;
+    width: 10vw;
+    font-size: 1vw;
     background-color: rgb(92, 129, 168);
-    border-radius: 20px;
     color: rgb(255, 255, 255);
     transition: 0.7s ease all;
   }
@@ -124,8 +121,8 @@
   }
   
 .cont_buttom h2 {
-    font-size: 1.1vw;
-    letter-spacing: 0.2vw;
+    font-size: 0.7vw;
+    letter-spacing: 0.1vw;
     margin-top: 1.5vh;
   }
 
@@ -139,164 +136,27 @@
 }
 
 .errors{
-    font-size: 1.1vw;
-    padding-top: 2px;
+    position: absolute;
+    width:30vw;
+    margin-top: -2vw;
+    font-size: 1vw;
     text-align: center;
     color: red;
     font-family: 'Prompt', sans-serif;
 }
 
 .error{
-    width: 100%;
+    width: 32vw;
+    position: absolute;
     text-align: center;
     font-size: 1.5vw;
-    margin-bottom: -3vh;
-    font-weight: 500;
+    margin-top: -2vw;
+    border-left: 0.4vw solid rgb(0, 0, 0);
+    border-right: 0.4vw solid rgb(0, 0, 0);
+    margin-left: -1vw;
+    font-weight: 300;
     font-family: 'Prompt', sans-serif;
     background-color: red;
-    border-radius: 10px;
     color: white;
 }
 
-@media(min-width: 1100px) {
-    .formulario{
-        width: 70%;
-        height: 80%;
-    }
-    .img_form{
-        width: 50%;
-    }
-    
-    .titulo{
-        font-size: 3vw;
-    }
-    
-    .titulo_2{
-        font-size: 5vw;
-    }
-    
-    .subtitulo{
-        font-size: 1.2vw;
-        font-weight: 400;
-       
-    }
-    
-    .login{
-        font-size: 4vw;
-    
-    }
-    
-    .input{
-        height: 5vh;
-        margin-bottom: 1vh;
-        margin-top: 1vh;
-    }
-    .input::placeholder{
-        font-size: 1.1vw;
-      }
-    
-    .info{
-        font-size: 0.9vw;
-        margin-top: 6vh;
-    }
-    .info2{
-        font-size: 1.3vw;
-        margin-right: 1vw;
-    }
-    
-    .cont_buttom {
-        margin-top: 2vh;
-        text-align: center;
-      }
-      
-    .cont_buttom button {
-        border: none;
-        padding: 0.6vw;
-        font-size: 1.1vw;
-        background-color: rgb(41, 67, 95);
-      }
-    .cont_buttom h2 {
-        font-size: 0.8vw;
-        letter-spacing: 0.1vw;
-        margin-top: 1vh;
-      }
-    
-    .form{
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: auto;
-        margin-top: 5vh;
-    
-    }
-    
-    .errors{
-        font-size: 1.1vw;
-        text-align: center;
-        color: red;
-        font-family: 'Prompt', sans-serif;
-    }
-    
-    .error{
-        width: 100%;
-        text-align: center;
-        font-size: 1.2vw;
-        margin-bottom: -3vh;
-        font-weight: 400;
-        font-family: 'Prompt', sans-serif;
-        background-color: rgba(255, 0, 0, 0.699);
-        border-radius: 10px;
-        color: white;
-    }
-    
-
-    
-}
-
-@media (max-width:720px){
-    .login{
-        font-size: 6.9vw;
-    }
-    .info{
-        font-size: 3vw;
-        margin-top: 6vh;
-    }
-    .info2{
-        font-size: 2.5vw;
-        margin-right: 1vw;
-    }
-    .input::placeholder{
-        font-size: 2vw;
-        padding-left: 1vw;
-      }
-    .errors{
-        padding-top: 2vh;
-        font-size: 2.2vw;
-        text-align: center;
-        color: red;
-        font-family: 'Prompt', sans-serif;
-    }
-    .input{
-        width: 40vw;
-    }
-    .cont_buttom {
-        margin-top: 2vh;
-        text-align: center;
-      }
-      
-    .cont_buttom button {
-        border: none;
-        padding: 2vw;
-        width: 20vw;
-        font-size: 2vw;
-        background-color: rgb(41, 67, 95);
-      }
-    .cont_buttom h2 {
-        font-size: 1.8vw;
-        letter-spacing: 0.1vw;
-        margin-top: 1vh;
-      }
-
-    
-    
-}
