--- a/cliente/src/Componentes/AllPlayers/AllPlayers.module.css
+++ b/cliente/src/Componentes/AllPlayers/AllPlayers.module.css
@@ -27,10 +27,10 @@
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   border: none;
   border-radius: 10px;
-  font-size: 1.8vw;
+  font-size: 14px;
   text-align: center;
-  height: 4vw;
-  width: 25vw;
+  width: 250px;
+  height: 40px;
   font-family: "Gabarito", cursive;
 }
 
@@ -39,9 +39,9 @@
   border: none;
   border-radius: 10px;
   text-align: center;
-  font-size: 1.8vw;
-  height: 4vw;
-  width: 25vw;
+  font-size: 14px;
+  width: 250px;
+  height: 40px;
   transition: 0.25s ease all;
   font-family: "Gabarito", cursive;
 }
@@ -66,8 +66,8 @@
 }
 
 .nombre {
-  font-size: 0.8vw;
-  letter-spacing: 0.1vw;
+  font-size: 11px;
+  letter-spacing: 2px;
   text-transform: uppercase;
   font-family: "Plus Jakarta Sans", sans-serif;
   font-weight: 800;
@@ -87,26 +87,27 @@
 .tabla {
   width: 100%;
   height: 100%;
-  font-size: 0.7vw;
+  font-size: 20px;
   overflow: hidden;
   text-align: center;
   font-family: "Bricolage Grotesque", sans-serif;
 }
 
 .boton {
-  font-size: 1vw;
+  font-size: 12px;
 }
 
 .contenedor_tabla {
-  position: absolute;
+  position: relative;
   width: 80%;
-  border-radius: 1vw;
-  top: 15vh;
+  border-radius: 10px;
+  top: 0;
   left: 0;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
   background-color: transparent;
   right: 0;
   margin: auto;
+  margin-top: 20px;
   text-align: center;
   font-family: "Bricolage Grotesque", sans-serif;
 }
@@ -116,57 +117,28 @@
 }
 
 .titulos2 {
-  font-size: 1.1vw;
+  font-size: 15px;
   font-family: "Plus Jakarta Sans", sans-serif;
   text-transform: uppercase;
 }
 
-.search {
-  z-index: 1000;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-}
-
-.search input {
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-  border: none;
-  text-align: center;
-  border-radius: 10px;
-  height: 4vh;
-  width: 30vw;
-  font-family: "Plus Jakarta Sans", sans-serif;
-}
-
 .imge {
-  width: 2vw;
+  width: 25px;
 }
 
 .circulo_verde {
-  width: 1vw;
-  height: 1vw;
-  border-radius: 1vh;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
   background-color: green;
   color: green;
 }
 
 .circulo_rojo {
-  width: 1vw;
-  height: 1vw;
-  border-radius: 1vh;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
   color: rgb(255, 4, 4);
   background-color: rgb(255, 4, 4);
 }
 
-
-@media(min-width: 1100px) {
-  .filtrado input {
-    height: 3.5vw;
-    width: 25vw;  
-  }
-  .filtrado select {
-    height: 3.5vw;
-    width: 25vw;
-  }
-
-}
