--- a/cliente/src/Componentes/Home/Home.module.css
+++ b/cliente/src/Componentes/Home/Home.module.css
@@ -7,7 +7,7 @@
   background-color: rgb(232, 242, 253);
   align-items: center;
   overflow: hidden;
-  height: 100vh;
+  height: 100%;
 }
 
 .contenedor h2 {
