--- a/cliente/src/Componentes/Jugador/jugador.module.css
+++ b/cliente/src/Componentes/Jugador/jugador.module.css
@@ -3,6 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500;600;800;900&display=swap');
 
 
 .contenedor{
@@ -10,13 +14,13 @@
     position: relative;
     right: 0;
     align-items: center;
-    height: 98vh;
+    height: 100vh;
     background-color: rgb(232, 242, 253);
 }
 
 .nombre_delete{
     text-align: center;
-    font-size: 1.5vw;
+    font-size: 20px;
     text-transform: uppercase;
     font-weight: 800;
     font-family: 'Urbanist', sans-serif;
@@ -28,10 +32,10 @@
 .modalheader{
     background-color: #950015;
     justify-content: end;
-    font-size: 1vw;
+    font-size: 20px;
 }
 .modalheader h2{
-    font-size: 1.4vw;
+    font-size: 14px;
 }
 .alin_bot{
     display: flex;
@@ -39,8 +43,8 @@
     padding-bottom: 20px;
 }
 .alin_bot  Button{
-    margin-left: 2vw;
-    margin-right: 4vw;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .modalbody{
@@ -48,9 +52,8 @@
 }
 .cont_centr{
     position: absolute;
-    box-shadow:  1px 1px 20px rgba(0, 0, 0, 0.596), 0 5px 5px -20px #000000;
-    border-radius: 0.4vw;
-    top: 3vh;
+    box-shadow:  1px 5px 10px rgba(0, 0, 0, 0.596), 0 5px 5px -20px #000000;
+    top: 20px;
     background-color: rgb(255, 255, 255);
     width: 80%;
     left: 50%;
@@ -60,11 +63,12 @@
 .input_name{
     text-decoration: none;
     border: none;
-    margin-bottom: 2vh;
+    margin-bottom: 20px;
     width: 100%;
     background-color: transparent;
-    font-size: 4vw;
-    font-family: 'Paytone One', sans-serif;
+    font-size: 60px;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .info_secundaria input{
@@ -85,6 +89,7 @@
     display: flex;
     margin-left: 1vw;
     align-items: center;
+    font-family: 'Montserrat', sans-serif;
     padding-bottom: 5vh;
 }
 .info_secundaria  select{
@@ -111,8 +116,8 @@
 .mycheck {
     cursor: pointer;
     background-color: #cc3d3d;
-    width: 4.5vw;
-    height: 2.7vh;
+    width: 45px;
+    height: 18px;
     transition: 0.5s ease all;
     appearance: none;
     border-radius: 4px;
@@ -124,7 +129,7 @@
   }
 
 .cuota{
-    font-size: 1.1vw;
+    font-size: 15px;
     text-align: center;
 }
 
@@ -180,10 +185,10 @@
 }
     
 .info_second div h2{
-    font-family: 'Oswald', sans-serif;
-        font-weight: 300;
-        letter-spacing: 0.2vw;
-        font-size: 1.7vw;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    letter-spacing: 0;
+    font-size: 22px;
 
 }
 .info_second div{
@@ -206,10 +211,10 @@
 
 
 .info_secundaria div h2{
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 300;
-    letter-spacing: 0.2vw;
-    font-size: 1.7vw;
+    letter-spacing: 0;
+    font-size: 22px;
 
 }
 
@@ -223,10 +228,6 @@
     margin: auto;
 }
 
-
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500;600;800;900&display=swap');
 
 .contenedor_info_carnet h4{
     position: absolute;
