--- a/cliente/src/Componentes/NewPlayer/NewPlayer.module.css
+++ b/cliente/src/Componentes/NewPlayer/NewPlayer.module.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gabarito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500&display=swap');
 
 
 .formu{
@@ -27,7 +28,9 @@
 }
 .contenedor{
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
     background-color: rgb(232, 242, 253);
     position: relative;
     z-index: 10;
@@ -36,21 +39,21 @@
 
 
 .formulario{
-    padding-top: 30px;
     width: 80%;
-    height: auto;
+    height: 100%;
     left: 0;
-    border-radius: 20px;
-    top:20px;
-    position: absolute;
-    box-shadow:  10px 10px 20px rgba(0, 0, 0, 0.507), 0 5px 5px -10px #000000;
+    top:0;
+    position: relative;
+    box-shadow:  5px 5px 20px rgba(0, 0, 0, 0.507), 0 5px 5px -10px #000000;
     right: 0;
     margin: auto;
+    padding-top: 40px;
     background-color: white;
 }
 
 .formulario h2{
-    font-family: 'Dela Gothic One', cursive;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
     text-transform: uppercase;
 }
 .alert{
@@ -59,7 +62,8 @@
 }
 
 .formu h5{
-    font-family: 'Dosis', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
     padding: 1vw;
 
 }
