--- a/cliente/src/Componentes/Ajustes/Ajustes.module.css
+++ b/cliente/src/Componentes/Ajustes/Ajustes.module.css
@@ -3,11 +3,11 @@
 
 
 .contenedor{
-    background-color: rgb(141, 141, 141);
+    background-color: #212121;
     width: 100%;
     overflow: hidden;
     box-shadow:  5px 5px 12px rgba(0, 0, 0, 0.507);
-    height: 100vh;
+    height: 88vh;
 }
 
 .titulo{
@@ -36,3 +36,155 @@
 .contenedor ul{
     margin-top: 5vh;
 }
+
+.card {
+    overflow: hidden;
+    position: absolute;
+    background-color: #ffffff;
+    text-align: left;
+    top: 150px;
+    left: 38%;
+    z-index: 3;
+    border-radius: 0.5rem;
+    max-width: 290px;
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  }
+  .card::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.76); /* Ajusta la opacidad según tus necesidades */
+    z-index: -1;
+    display: block;
+  }
+
+  .header {
+    padding: 1.25rem 1rem 1rem 1rem;
+    background-color: #ffffff;
+  }
+  
+  .image {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #FEE2E2;
+    flex-shrink: 0;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 9999px;
+  }
+  
+  .image svg {
+    color: #DC2626;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  
+  .content {
+    margin-top: 0.75rem;
+    text-align: center;
+  }
+  
+  .title {
+    color: #111827;
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+  }
+  
+  .message {
+    margin-top: 0.5rem;
+    color: #6B7280;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+  
+  .actions {
+    margin: 0.75rem 1rem;
+    background-color: #F9FAFB;
+  }
+  
+  .desactivate {
+    display: inline-flex;
+    padding: 0.5rem 1rem;
+    background-color: #DC2626;
+    color: #ffffff;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 500;
+    justify-content: center;
+    width: 100%;
+    border-radius: 0.375rem;
+    border-width: 1px;
+    border-color: transparent;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  }
+  
+  .cancel {
+    display: inline-flex;
+    margin-top: 0.75rem;
+    padding: 0.5rem 1rem;
+    background-color: #ffffff;
+    color: #374151;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 500;
+    justify-content: center;
+    width: 100%;
+    border-radius: 0.375rem;
+    border: 1px solid #D1D5DB;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  }
+
+
+  .button2 {
+    border: none;
+    padding: 0.7em 2em;
+    font-size: 18px;
+    font-family: inherit;
+    background-blend-mode: multiply;
+    color: rgb(235, 234, 234);
+    border-radius: 9px;
+    background: linear-gradient(225deg, #181818, #2e2e2e);
+    box-shadow: -5px 5px 10px #191919,
+                5px -5px 10px #292929;
+   }
+   
+   .button2:hover {
+    background: #212121;
+    transition: background 1s ease;
+    box-shadow: -5px 5px 10px #191919,
+                5px -5px 10px #292929;
+   }
+   
+   .button2:active {
+    transition: box-shadow .1s ease;
+    border-radius: 9px;
+    background: #212121;
+    box-shadow: inset -5px 5px 10px #191919,
+                 inset 5px -5px 10px #292929;
+   }
+   
+   .button2 span {
+    opacity: 0.5;
+    transition: opacity 0.2s ease;
+   }
+   
+   .button2:hover span {
+    opacity: 0.7;
+   }
+
+
+
+  .contenedor img{
+    z-index: 9999999999;
+    width: 300px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
