--- a/cliente/src/Componentes/AllPlayers/AllPlayers.module.css
+++ b/cliente/src/Componentes/AllPlayers/AllPlayers.module.css
@@ -6,7 +6,7 @@
   width: 100%;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 88vh;
   background-color: rgb(232, 242, 253);
   right: 0;
   z-index: 100;
@@ -86,9 +86,7 @@
 
 .tabla {
   width: 100%;
-  height: 100%;
   font-size: 20px;
-  overflow: hidden;
   text-align: center;
   font-family: "Bricolage Grotesque", sans-serif;
 }
@@ -100,10 +98,9 @@
 .contenedor_tabla {
   position: relative;
   width: 80%;
-  border-radius: 10px;
+  height: 70%;
   top: 0;
   left: 0;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
   background-color: transparent;
   right: 0;
   margin: auto;
@@ -113,7 +110,17 @@
 }
 
 .contenedor_tabla::-webkit-scrollbar {
-  display: none;
+  width: 8px; /* Ancho del scrollbar */
+}
+
+.contenedor_tabla::-webkit-scrollbar-thumb {
+  background-color: rgba(187, 186, 186, 0.733); /* Color del "thumb" del scrollbar (barra deslizante) */
+  border-radius: 4px; /* Bordes redondeados del "thumb" */
+}
+
+.contenedor_tabla::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.1); /* Color del track (fondo del scrollbar) */
+  border-radius: 4px; /* Bordes redondeados del track */
 }
 
 .titulos2 {
