--- a/cliente/src/Componentes/Home/Home.module.css
+++ b/cliente/src/Componentes/Home/Home.module.css
@@ -20,18 +20,22 @@
 .sections {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 30px;
+  padding-top: 50px;
   justify-content: space-around;
 }
 
 .sections div {
-  background-color: aliceblue;
+  
   display: flex;
   margin-left: 1vw;
   margin-right: 1vw;
-  border-radius: 1.2vw;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 30px;
+  background: white;
+  box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+  0 0  0 2px rgb(190, 190, 190),
+  0.3em 0.3em 1em rgba(0,0,0,0.3);
   margin-bottom: 30px;
+  transition: border-radius 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .sections div div {
