--- a/cliente/src/Componentes/Jugador/jugador.module.css
+++ b/cliente/src/Componentes/Jugador/jugador.module.css
@@ -52,7 +52,9 @@
 }
 .cont_centr{
     position: absolute;
-    box-shadow:  1px 5px 10px rgba(0, 0, 0, 0.596), 0 5px 5px -20px #000000;
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(190, 190, 190),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
     top: 20px;
     background-color: rgb(255, 255, 255);
     width: 80%;
@@ -64,12 +66,18 @@
     text-decoration: none;
     border: none;
     margin-bottom: 20px;
-    width: 100%;
+    margin-left: 20px;
+    width: 95%;
     background-color: transparent;
     font-size: 60px;
     font-weight: 600;
     font-family: 'Montserrat', sans-serif;
+    outline: none;
 }
+
+.input_name:focus {
+    border: none;
+  }
 
 .info_secundaria input{
     margin-left: 1vw;
@@ -265,15 +273,13 @@
 .arrow{
     position: absolute;
     font-size: 4vw;
-    top: 3vw;
-    left: 3vw;
+    top: 30px;
+    left: 40px;
     color: #0e2125;
 }
 
 .arrow :hover{
-    transition: 1s ease;
     cursor: pointer;
-    color: #950015;
 }
 
 .qr_carnet{
@@ -435,6 +441,31 @@
     align-items: baseline;
 }
 
+
+.cuotass input{
+    width: 100%;
+    max-width: 220px;
+    height: 45px;
+    padding: 12px;
+    border-radius: 12px;
+    border: 1.5px solid lightgrey;
+    outline: none;
+    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+    box-shadow: 0px 0px 20px -18px;
+}
+
+.cuotass input:hover{
+    border: 2px solid lightgrey;
+    box-shadow: 0px 0px 20px -17px;
+}
+
+.cuotass input:active{
+    transform: scale(0.95);
+}
+
+.cuotass input:focus{
+    border: 2px solid grey;
+}
 .cuotass div{
     margin-left: 1vw;
 }
@@ -448,22 +479,78 @@
     
 }
 
-.checka{
+.container2 input {
+    position: absolute;
+    opacity: 0;
     cursor: pointer;
-    background-color: #cc3d3d;
-    width: 5vw;
-    margin-left: 0.3vw;
-    border-radius: 10vw;
-    height: 2vh;
-    transition: 0.5s ease all;
-    appearance: none;
-    border: 0.1vw solid #030101;
-}
-
-.checka:checked {
-    background-color: rgb(42, 189, 79);
-  }
-
+    height: 0;
+    width: 0;
+   }
+   
+   .container2 {
+    display: block;
+    position: absolute;
+    right: 90px;
+    cursor: pointer;
+    font-size: 20px;
+    user-select: none;
+   }
+   
+   /* Create a custom checkbox */
+   .checkmark {
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 1.3em;
+    width: 1.3em;
+    background-color: #ccc;
+    transition: all 0.3s;
+    border-radius: 5px;
+   }
+   
+   /* When the checkbox is checked, add a blue background */
+   .container2 input:checked ~ .checkmark {
+    background-color: #47da99;
+    animation: pop 0.5s;
+    animation-direction: alternate;
+   }
+   
+   /* Create the checkmark/indicator (hidden when not checked) */
+   .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+   }
+   
+   /* Show the checkmark when checked */
+   .container2 input:checked ~ .checkmark:after {
+    display: block;
+   }
+   
+   /* Style the checkmark/indicator */
+   .container2 .checkmark:after {
+    left: 0.45em;
+    top: 0.25em;
+    width: 0.25em;
+    height: 0.5em;
+    border: solid white;
+    border-width: 0 0.15em 0.15em 0;
+    transform: rotate(45deg);
+   }
+   
+   @keyframes pop {
+    0% {
+     transform: scale(1);
+    }
+   
+    50% {
+     transform: scale(0.9);
+    }
+   
+    100% {
+     transform: scale(1);
+    }
+   }
 
 .tablo{
     text-align: center;
@@ -489,7 +576,7 @@
     width: 10vw;
     height: auto;
     font-size: 1vw;
-    background: linear-gradient(to left,#34db66ce,#3d9147);
+    background: green;
     border: none;
     font-weight: 600;
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.212);
@@ -500,10 +587,452 @@
     width: 5vw;
     height: auto;
     font-size: 1vw;
-    background: linear-gradient(to left,#f01f03ce,#460e0e);
+    background: red;
     border: none;
     font-weight: 600;
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.212);
 
 }
 
+.switch {
+    font-size: 17px;
+    position: relative;
+    margin-left: 10px;
+    transform: translateY(-4px);
+    display: inline-block;
+    width: 3.5em;
+    height: 2em;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    inset: 0;
+    background: #f34029;
+    border-radius: 50px;
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2em;
+    width: 2em;
+    inset: 0;
+    background-color: white;
+    border-radius: 50px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.4);
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .switch input:checked + .slider {
+    background: #15fa15;
+  }
+  
+  .switch input:focus + .slider {
+    box-shadow: 0 0 1px #0974f1;
+  }
+  
+  .switch input:checked + .slider:before {
+    transform: translateX(1.6em);
+  }
+
+  .imge{
+    transform: translateY(-4px);
+    height: 38px;
+  }
+
+
+  
+  .inputGroup {
+    font-family: 'Segoe UI', sans-serif;
+    margin: 1em 0 1em 0;
+    max-width: 190px;
+    position: relative;
+    margin-left: 145px;
+  }
+  
+  .inputGroup input {
+    font-size: 100%;
+    padding: 0.8em;
+    outline: none;
+    border: 2px solid rgb(200, 200, 200);
+    background-color: transparent;
+    border-radius: 20px;
+    width: 100%;
+  }
+  
+  .inputGroup label {
+    font-size: 100%;
+    position: absolute;
+    left: 0;
+    padding: 0.8em;
+    margin-left: 0.5em;
+    pointer-events: none;
+    transition: all 0.3s ease;
+    color: rgb(100, 100, 100);
+  }
+  
+  .inputGroup :is(input:focus, input:valid)~label {
+    transform: translateY(-50%) scale(.9);
+    margin: 0em;
+    margin-left: 1.3em;
+    padding: 0.4em;
+    background-color: #ffffff;
+  }
+  
+  .inputGroup :is(input:focus, input:valid) {
+    border-color: rgb(150, 150, 200);
+  }
+
+
+  .boton_otros {
+    position: absolute;
+    align-items: center;
+    background-color: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: .25rem;
+    box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+    box-sizing: border-box;
+    color: rgba(0, 0, 0, 0.85);
+    cursor: pointer;
+    display: inline-flex;
+    font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    justify-content: center;
+    line-height: 1.25;
+    min-height: 3rem;
+    padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+    text-decoration: none;
+    transition: all 250ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: baseline;
+    top: 0;
+    right: -200px;
+    width: auto;
+   }
+   
+   .boton_otros:hover,
+   .boton_otros:focus {
+    border-color: rgba(0, 0, 0, 0.15);
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+    color: rgba(0, 0, 0, 0.65);
+   }
+   
+   .boton_otros:hover {
+    transform: translateY(-1px);
+   }
+   
+   .boton_otros:active {
+    background-color: #F0F0F1;
+    border-color: rgba(0, 0, 0, 0.15);
+    box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+    color: rgba(0, 0, 0, 0.65);
+    transform: translateY(0);
+   }
+
+
+   .button,
+   .input,
+   .select,
+   .textarea {
+     font: inherit;
+   }
+   
+   a {
+     color: inherit;
+   }
+   
+   .modal-container {
+     max-height: 400px;
+     max-width: 500px;
+     margin-left: auto;
+     margin-right: auto;
+     position: absolute;
+     top: 20%;
+     left: 35%;
+     background-color: #fff;
+     border-radius: 16px;
+     overflow: hidden;
+     display: flex;
+     flex-direction: column;
+     box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.25);
+   }
+   
+   @media (max-width: 600px) {
+     .modal-container {
+       width: 90%;
+     }
+   }
+   
+   .modal-container-header {
+     padding: 16px 32px;
+     border-bottom: 1px solid #ddd;
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+   }
+   
+   .modal-container-title {
+     display: flex;
+     align-items: center;
+     gap: 8px;
+     line-height: 1;
+     font-weight: 700;
+     font-size: 1.125;
+   }
+   
+   .modal-container-title svg {
+     width: 32px;
+     height: 32px;
+     color: #750550;
+   }
+   
+   .modal-container-body {
+     padding: 24px 32px 51px;
+     overflow-y: auto;
+   }
+   
+   .rtf h1,
+   .rtf h2,
+   .rtf h3,
+   .rtf h4,
+   .rtf h5,
+   .rtf h6 {
+     font-weight: 700;
+   }
+   
+   .rtf h1 {
+     font-size: 1.5rem;
+     line-height: 1.125;
+   }
+   
+   .rtf h2 {
+     font-size: 1.25rem;
+     line-height: 1.25;
+   }
+   
+   .rtf h3 {
+     font-size: 1rem;
+     line-height: 1.5;
+   }
+   
+   .rtf > * + * {
+     margin-top: 1em;
+   }
+   
+   .rtf > * + :is(h1, h2, h3) {
+     margin-top: 2em;
+   }
+   
+   .rtf > :is(h1, h2, h3) + * {
+     margin-top: 0.75em;
+   }
+   
+   .rtf ul,
+   .rtf ol {
+     margin-left: 20px;
+     list-style-position: inside;
+   }
+   
+   .rtf ol {
+     list-style: numeric;
+   }
+   
+   .rtf ul {
+     list-style: disc;
+   }
+   
+   .modal-container-footer {
+     padding: 20px 32px;
+     display: flex;
+     align-items: center;
+     justify-content: flex-end;
+     border-top: 1px solid #ddd;
+     gap: 12px;
+     position: relative;
+   }
+   
+   .modal-container-footer:after {
+     content: "";
+     display: block;
+     position: absolute;
+     top: -51px;
+     left: 24px;
+     right: 24px;
+     height: 50px;
+     flex-shrink: 0;
+     background-image: linear-gradient(to top, rgba(255, 255, 255, 0.75), transparent);
+     pointer-events: none;
+   }
+   
+   .button {
+     padding: 12px 20px;
+     border-radius: 8px;
+     background-color: transparent;
+     border: 0;
+     font-weight: 600;
+     cursor: pointer;
+     transition: 0.15s ease;
+   }
+   
+   .button.is-ghost:hover, .button.is-ghost:focus {
+     background-color: #dfdad7;
+   }
+   
+   .button.is-primary {
+     background-color: #750550;
+     color: #fff;
+   }
+   
+   .button.is-primary:hover, .button.is-primary:focus {
+     background-color: #4a0433;
+   }
+   
+   .icon-button {
+     padding: 0;
+     border: 0;
+     background-color: transparent;
+     width: 40px;
+     height: 40px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     line-height: 1;
+     cursor: pointer;
+     border-radius: 8px;
+     transition: 0.15s ease;
+   }
+   
+   .icon-button svg {
+     width: 24px;
+     height: 24px;
+   }
+   
+   .icon-button:hover, .icon-button:focus {
+     background-color: #dfdad7;
+   }
+
+   .card {
+    overflow: hidden;
+    position: absolute;
+    background-color: #ffffff;
+    text-align: left;
+    top: 100px;
+    left: 34%;
+    z-index: 5;
+    border-radius: 0.5rem;
+    width: 390px;
+    height: auto;
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  }
+  .card::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.76); /* Ajusta la opacidad según tus necesidades */
+    z-index: -3;
+    display: block;
+  }
+
+  .header {
+    padding: 1.25rem 1rem 1rem 1rem;
+    background-color: #ffffff;
+  }
+  
+  .image {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #FEE2E2;
+    flex-shrink: 0;
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 9999px;
+  }
+  
+  .image svg {
+    color: #DC2626;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  
+  .content {
+    margin-top: 0.75rem;
+    text-align: center;
+  }
+  
+  .title {
+    color: #111827;
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+  }
+  
+  .message {
+    margin-top: 0.5rem;
+    color: #6B7280;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .message textarea{
+    width: 90%;
+    height: 120px;
+  }
+  
+  .actions {
+    margin: 0.75rem 1rem;
+    background-color: #F9FAFB;
+  }
+  
+  .desactivate {
+    display: inline-flex;
+    padding: 0.5rem 1rem;
+    background-color: #2999a8;
+    color: #ffffff;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 500;
+    justify-content: center;
+    width: 100%;
+    border-radius: 0.375rem;
+    border-width: 1px;
+    border-color: transparent;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  }
+  
+  .cancel {
+    display: inline-flex;
+    margin-top: 0.75rem;
+    padding: 0.5rem 1rem;
+    background-color: #ffffff;
+    color: #374151;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 500;
+    justify-content: center;
+    width: 100%;
+    border-radius: 0.375rem;
+    border: 1px solid #D1D5DB;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  }
