--- a/cliente/src/Componentes/NewPlayer/NewPlayer.module.css
+++ b/cliente/src/Componentes/NewPlayer/NewPlayer.module.css
@@ -44,11 +44,21 @@
     left: 0;
     top:0;
     position: relative;
-    box-shadow:  5px 5px 20px rgba(0, 0, 0, 0.507), 0 5px 5px -10px #000000;
+    background: white;
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(190, 190, 190),
+    0.3em 0.3em 1em rgba(0,0,0,0.3);
+    margin-bottom: 30px;
+    transition: border-radius 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     right: 0;
     margin: auto;
     padding-top: 40px;
-    background-color: white;
+   
+}
+
+.alertContainer{
+    position: absolute;
+    width: 100%;
 }
 
 .formulario h2{
@@ -58,7 +68,9 @@
 }
 .alert{
     position: relative;
-    z-index: 99990;
+    z-index: 99999;
+    top: -50px;
+
 }
 
 .formu h5{
@@ -66,6 +78,17 @@
     font-size: 14px;
     padding: 1vw;
 
+}
+
+.formu textarea{
+    width: 400px;
+    height: 50px;
+    font-size: 13px;
+    font-family: 'Prompt', sans-serif;
+    border-radius: 10px;
+    border: none;
+    background-color: aliceblue;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.212);
 }
 
 .boton{
@@ -108,6 +131,3 @@
     border: 1px solid rgb(147, 186, 192);
 }
 
-@media(max-width :1050px){
-
-}
